--- a/package.json
+++ b/package.json
@@ -18,30 +18,34 @@
 		"configuration": {
 			"title": "",
 			"properties": {
-			  "my-ext.alias": {
-				"type": "object",
-				"default": {
-				  "@": "src"
+				"enhanced.alias": {
+					"type": "object",
+					"default": {},
+					"description": "路径别名映射。例如：{@:src}",
+					"scope": "resource",
+					"properties":{
+						"": {
+							"type": "string",
+							"default": ""
+						}
+					}
 				},
-				"description": "路径别名",
-				"scope": "resource"
-			  },
-			  "my-ext.languages": {
-				"type": "array",
-				"items": {
-				  "type": "string"
-				},
-				"default": [
-				  "javascript",
-				  "typescript",
-				  "scss",
-				  "vue"
-				],
-				"description": "支持的文件类型",
-				"scope": "resource"
-			  }
+				"enhanced.languages": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					},
+					"default": [
+						"javascript",
+						"typescript",
+						"scss",
+						"vue"
+					],
+					"description": "支持的文件类型",
+					"scope": "resource"
+				}
 			}
-		  }
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
